Simple-web-app/nginx-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.local #domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service # traffic sent to nginx.local will be forwarded to this service.
            port:
              number: 80
